[project]
name = "udemy-master-langgraph-ollama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ddgs>=9.14.4",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-ollama>=1.1.0",
    "langfuse>=4.12.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg>=3.3.4",
    "psycopg-binary>=3.3.4",
    "python-dotenv>=1.2.2",
]
